Add more results

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "0.2572963333745647"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        " 't5-xl-cot-longer': 0.38825762428050603}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "0.26155536040051836"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -889,13 +889,7 @@
       "salient_translation_error_detection.json accuracy: 73/250 = 0.292, missing: 48/250\n",
       "snarks.json accuracy: 99/178 = 0.5561797752808989, missing: 0/178\n",
       "sports_understanding.json accuracy: 146/250 = 0.584, missing: 0/250\n",
-      "temporal_sequences.json accuracy: 67/250 = 0.268, missing: 1/250\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "temporal_sequences.json accuracy: 67/250 = 0.268, missing: 1/250\n",
       "tracking_shuffled_objects_five_objects.json accuracy: 35/250 = 0.14, missing: 1/250\n",
       "tracking_shuffled_objects_seven_objects.json accuracy: 30/250 = 0.12, missing: 0/250\n",
       "tracking_shuffled_objects_three_objects.json accuracy: 84/250 = 0.336, missing: 0/250\n",
@@ -955,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +984,7 @@
        " 'word_sorting': 0.024}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1119,7 @@
        " 'word_sorting': 0.02}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1250,14 +1244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----------Parsing opt-full-data-dpo-few-shots----------\n",
+      "----------Parsing opt-full-data-dpo----------\n",
       "boolean_expressions.json accuracy: 124/250 = 0.496, missing: 10/250\n",
       "causal_judgement.json accuracy: 64/187 = 0.3422459893048128, missing: 4/187\n",
       "date_understanding.json accuracy: 0/250 = 0.0, missing: 0/250\n",
@@ -1289,7 +1283,7 @@
       "Total score: 620/6761 = 0.09170241088596362\n",
       "Missing outputs: 1040/6761 = 0.15382339890548735\n",
       "Adjusted score: 887.5881867095472/6761 = 0.13128060741155853\n",
-      "----------Parsing opt-full-data-dpo-few-shots-5-epochs----------\n",
+      "----------Parsing opt-full-data-dpo-0.5----------\n",
       "boolean_expressions.json accuracy: 112/250 = 0.448, missing: 15/250\n",
       "causal_judgement.json accuracy: 70/187 = 0.37433155080213903, missing: 5/187\n",
       "date_understanding.json accuracy: 0/250 = 0.0, missing: 0/250\n",
@@ -1319,7 +1313,38 @@
       "word_sorting.json accuracy: 0/250 = 0.0, missing: 64/250\n",
       "Total score: 591/6511 = 0.0907694670557518\n",
       "Missing outputs: 1074/6511 = 0.164951620334818\n",
-      "Adjusted score: 867.3362620442824/6511 = 0.13321091415209374\n"
+      "Adjusted score: 867.3362620442824/6511 = 0.13321091415209374\n",
+      "----------Parsing opt-full-data-sft----------\n",
+      "boolean_expressions.json accuracy: 79/250 = 0.316, missing: 35/250\n",
+      "causal_judgement.json accuracy: 59/187 = 0.3155080213903743, missing: 14/187\n",
+      "date_understanding.json accuracy: 0/250 = 0.0, missing: 3/250\n",
+      "disambiguation_qa.json accuracy: 0/250 = 0.0, missing: 9/250\n",
+      "dyck_languages.json accuracy: 0/250 = 0.0, missing: 106/250\n",
+      "formal_fallacies.json accuracy: 36/250 = 0.144, missing: 24/250\n",
+      "geometric_shapes.json accuracy: 0/250 = 0.0, missing: 250/250\n",
+      "hyperbaton.json accuracy: 21/250 = 0.084, missing: 17/250\n",
+      "logical_deduction_five_objects.json accuracy: 0/250 = 0.0, missing: 9/250\n",
+      "logical_deduction_seven_objects.json accuracy: 0/250 = 0.0, missing: 19/250\n",
+      "logical_deduction_three_objects.json accuracy: 0/250 = 0.0, missing: 6/250\n",
+      "movie_recommendation.json accuracy: 0/250 = 0.0, missing: 13/250\n",
+      "multistep_arithmetic_two.json accuracy: 0/250 = 0.0, missing: 250/250\n",
+      "navigate.json accuracy: 86/250 = 0.344, missing: 52/250\n",
+      "object_counting.json accuracy: 24/250 = 0.096, missing: 15/250\n",
+      "penguins_in_a_table.json accuracy: 0/146 = 0.0, missing: 31/146\n",
+      "reasoning_about_colored_objects.json accuracy: 6/250 = 0.024, missing: 11/250\n",
+      "ruin_names.json accuracy: 0/250 = 0.0, missing: 30/250\n",
+      "salient_translation_error_detection.json accuracy: 0/250 = 0.0, missing: 236/250\n",
+      "snarks.json accuracy: 10/178 = 0.056179775280898875, missing: 5/178\n",
+      "sports_understanding.json accuracy: 114/250 = 0.456, missing: 0/250\n",
+      "temporal_sequences.json accuracy: 0/250 = 0.0, missing: 23/250\n",
+      "tracking_shuffled_objects_five_objects.json accuracy: 0/250 = 0.0, missing: 11/250\n",
+      "tracking_shuffled_objects_seven_objects.json accuracy: 0/250 = 0.0, missing: 51/250\n",
+      "tracking_shuffled_objects_three_objects.json accuracy: 1/250 = 0.004, missing: 24/250\n",
+      "web_of_lies.json accuracy: 101/250 = 0.404, missing: 24/250\n",
+      "word_sorting.json accuracy: 3/250 = 0.012, missing: 85/250\n",
+      "Total score: 540/6511 = 0.08293656888342804\n",
+      "Missing outputs: 1353/6511 = 0.20780218092458916\n",
+      "Adjusted score: 888.121939055786/6511 = 0.13640330810256274\n"
      ]
     }
    ],
